feat : filtering profiles,fake data added